--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,8 @@ concurrency:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    # 只在main分支或手动触发时运行部署流程
+    if: github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
