--- a/config/user/navigation.yml
+++ b/config/user/navigation.yml
@@ -3,7 +3,7 @@
   id: home
   active: true
 - name: 项目
-  icon: fas fa-project-diagram
+  icon: fa-regular fa-face-smile
   id: projects
 - name: 文章
   icon: fas fa-book
