--- a/config/user/pages/projects.yml
+++ b/config/user/pages/projects.yml
@@ -8,14 +8,14 @@ categories:
   - name: 个人项目
     icon: fas fa-code
     sites:
-      - name: 个人导航站
+      - name: 个人网站
         icon: fa-solid fa-user
         description: 一个简洁美观的个人网站
         url: "https://bento.me/yufengxiang"
-      - name: Todo List
-        icon: fas fa-tasks
-        description: 基于Vue3的待办事项管理器
-        url: "#"
+      - name: MoonTV
+        icon: fa-brands fa-youtube
+        description: 基于cloudflare部署的影视资源网
+        url: "https://www.tv,mvpbook.cn"
       - name: 个人博客
         icon: fas fa-blog
         description: 使用Hexo搭建的技术博客
