--- a/config/user/pages/friends.yml
+++ b/config/user/pages/friends.yml
@@ -5,21 +5,6 @@ subtitle: 优秀的博主和朋友们
 template: friends
 
 categories:
- - name: 优质博主
-    icon: fa-solid fa-web-awesome
-    sites:
-      - name: 零度博客
-        icon: fa-solid fa-code
-        description: 专注于分享免费、实用软件和有趣的网站、探索AI 黑科技与最新前沿的IT技术动态，帮助用户提升技术水平
-        url: "https://www.freedidi.com//"
-      - name: 
-        icon: 
-        description: 
-        url: "#"
-      - name: 
-        icon: 
-        description: 
-        url: "#"
     - name: 技术博主
     icon: fas fa-user-friends
     sites:
@@ -27,10 +12,10 @@ categories:
         icon: fa-regular fa-circle-user
         description: 全栈开发工程师，分享技术心得
         url: "https://www.xmdblog.com/"
-      - name: 小红的前端
-        icon: fas fa-paint-brush
-        description: 专注前端开发与设计
-        url: "#"
+       - name: 零度博客
+        icon: fa-solid fa-code
+        description: 专注于分享免费、实用软件和有趣的网站、探索AI 黑科技与最新前沿的IT技术动态，帮助用户提升技术水平
+        url: "https://www.freedidi.com/"
       - name: 小张的后端
         icon: fas fa-server
         description: 分享后端开发经验
