--- a/config/user/pages/friends.yml
+++ b/config/user/pages/friends.yml
@@ -8,18 +8,10 @@ categories:
 - name: 优质博主
     icon: fa-solid fa-web-awesome
     sites:
-      - name: 小明的博客
-        icon: fas fa-code
-        description: 全栈开发工程师，分享技术心得
-        url: "#"
-      - name: 小红的前端
-        icon: fas fa-paint-brush
-        description: 专注前端开发与设计
-        url: "#"
-      - name: 小张的后端
-        icon: fas fa-server
-        description: 分享后端开发经验
-        url: "#"
+      - name: 零度博客
+        icon: fa-solid fa-paper-plane
+        description: 专注于分享免费、实用软件和有趣的网站、探索AI 黑科技与最新前沿的IT技术动态，帮助用户提升技术水平
+        url: "https://www.freedidi.com/"
   - name: 技术博主
     icon: fas fa-user-friends
     sites:
