--- a/config/user/pages/projects.yml
+++ b/config/user/pages/projects.yml
@@ -16,10 +16,10 @@ categories:
         icon: fa-brands fa-youtube
         description: 基于cloudflare部署的影视资源网
         url: "https://itv.mvpbook.cn"
-      - name: 个人博客
-        icon: fas fa-blog
-        description: 使用Hexo搭建的技术博客
-        url: "#"
+      - name: 个人图床
+        icon: fa-solid fa-image
+        description: 使用telegram搭建的图床服务
+        url: "https://tuku.mvpbook.cn/"
   - name: 开源贡献
     icon: fas fa-code-branch
     sites:
