--- a/config/user/pages/friends.yml
+++ b/config/user/pages/friends.yml
@@ -12,6 +12,7 @@ categories:
         icon: fa-solid fa-paper-plane
         description: 专注于分享免费、实用软件和有趣的网站、探索AI 黑科技与最新前沿的IT技术动态，帮助用户提升技术水平
         url: https://www.freedidi.com
+  - name: 技术博主
     icon: fas fa-user-friends
     sites:
       - name: 小明的博客
