feat: 更新项目页面，只保留个人项目五子棋AI和英语单词本

--- a/config/user/pages/projects.yml
+++ b/config/user/pages/projects.yml
@@ -8,26 +8,11 @@ categories:
   - name: 个人项目
     icon: fas fa-code
     sites:
-      - name: 个人导航站
-        icon: fas fa-compass
-        description: 一个简洁美观的个人导航页面
-        url: "#"
-      - name: Todo List
-        icon: fas fa-tasks
-        description: 基于Vue3的待办事项管理器
-        url: "#"
-      - name: 个人博客
-        icon: fas fa-blog
-        description: 使用Hexo搭建的技术博客
-        url: "#"
-  - name: 开源贡献
-    icon: fas fa-code-branch
-    sites:
-      - name: Project A
-        icon: fab fa-github
-        description: 开源项目贡献
-        url: "#"
-      - name: Project B
-        icon: fab fa-github
-        description: 开源项目贡献
-        url: "#" 
+      - name: 五子棋AI
+        icon: fas fa-chess-board
+        description: 基于C++的五子棋AI对战系统，支持神经网络训练
+        url: https://github.com/handsomezhuzhu/gobang
+      - name: 英语单词本
+        icon: fas fa-book
+        description: 网页版生词本，记录单词和翻译
+        url: https://github.com/handsomezhuzhu/English-words 
