--- a/config/user/pages/ai.yml
+++ b/config/user/pages/ai.yml
@@ -18,27 +18,27 @@ categories:
         description: Google AI助手
       - name: Claude
         url: https://claude.ai
-        icon: iconify:logos:anthropic
+        icon: fas fa-user-tie
         description: Anthropic AI助手
       - name: 豆包
         url: https://www.doubao.com
-        icon: iconify:logos:douyin
+        icon: fas fa-comment-dots
         description: 字节跳动AI助手
       - name: DeepSeek
         url: https://chat.deepseek.com
-        icon: iconify:logos:deepseek
+        icon: fas fa-search
         description: DeepSeek对话模型
       - name: 通义千问
         url: https://qianwen.aliyun.com
-        icon: iconify:logos:alibaba
+        icon: fas fa-lightbulb
         description: 阿里云AI助手
       - name: Kimi
         url: https://kimi.moonshot.cn
-        icon: iconify:logos:moonshot
+        icon: fas fa-moon
         description: 月之暗面AI助手
       - name: Grok
         url: https://grok.x.ai
-        icon: iconify:logos:x
+        icon: fas fa-rocket
         description: xAI智能助手
   - name: 开发者平台
     icon: fas fa-code
@@ -49,7 +49,7 @@ categories:
         description: OpenAI开发者平台
       - name: Claude
         url: https://console.anthropic.com
-        icon: iconify:logos:anthropic
+        icon: fas fa-user-tie
         description: Anthropic开发者平台
       - name: Gemini Studio
         url: https://aistudio.google.com
@@ -57,28 +57,24 @@ categories:
         description: Google AI Studio
       - name: 阿里云通义
         url: https://tongyi.aliyun.com
-        icon: fab fa-alipay
+        icon: fas fa-cloud
         description: 阿里云AI开发平台
       - name: 腾讯云混元
         url: https://hunyuan.tencent.com
-        icon: iconify:logos:tencent
+        icon: fas fa-cloud
         description: 腾讯云AI开发平台
-      - name: 百度文心
-        url: https://yiyan.baidu.com
-        icon: fab fa-baidu
-        description: 百度AI开发平台
       - name: 讯飞星火
         url: https://xinghuo.xfyun.cn
-        icon: iconify:logos:iflytek
+        icon: fas fa-fire
         description: 科大讯飞AI平台
   - name: 其他AI工具
     icon: fas fa-tools
     sites:
       - name: Cursor
         url: https://cursor.sh
-        icon: iconify:logos:cursor
+        icon: fas fa-edit
         description: AI编程编辑器
       - name: Cherry Studio
         url: https://www.cherry-ai.com/
-        icon: iconify:logos:cherry
+        icon: fas fa-palette
         description: AI创意工作室
