--- a/config/_default/pages/home.yml
+++ b/config/_default/pages/home.yml
@@ -4,6 +4,7 @@ title: 欢迎使用        # 页面标题
 subtitle: 个人导航站点  # 页面副标题
 
 # 指定使用的模板文件名，现有页面模板可见 templates/pages（不含 .hbs）
+# 注意：当本页为“导航第一项（首页）”时，标题区会优先显示 `site.yml -> profile.title/profile.subtitle`
 template: home
 
 # 页面分类与站点列表（可按需增删顺序）
