--- a/config/_default/pages/articles.yml
+++ b/config/_default/pages/articles.yml
@@ -1,40 +1,36 @@
 # 默认页面配置（请勿直接修改）。
 # 建议复制到 config/user/pages/articles.yml 并按需调整。
 title: 技术文章                 # 页面标题
-subtitle: 分享我的技术文章和学习笔记  # 页面副标题
+subtitle: RSS 聚合文章列表（运行 npm run sync-articles 刷新）  # 页面副标题
 
 # 指定使用的模板文件名，现有页面模板可见 templates/pages（不含 .hbs）
 template: articles
 
-# 页面分类与站点列表
-categories:
-  - name: 最新文章
-    icon: fas fa-pen  # 分类图标
-    sites:
-      - name: Vue3最佳实践            # 站点名称
-        icon: fab fa-vuejs           # 文章/站点图标
-        description: Vue3组合式API的使用技巧  # 摘要
-        url: "#"                     # 链接（示例）
-      - name: JavaScript进阶
-        icon: fab fa-js
-        description: JavaScript高级特性解析
-        url: "#"
-      - name: Git使用技巧
-        icon: fab fa-git-alt
-        description: Git常用命令和工作流
-        url: "#"
-      - name: Docker入门
-        icon: fab fa-docker
-        description: Docker基础知识和实践
-        url: "#"
-  - name: 学习笔记
-    icon: fas fa-book
-    sites:
-      - name: React Hooks
-        icon: fab fa-react
-        description: React Hooks最佳实践
-        url: "#"
-      - name: Node.js实战
-        icon: fab fa-node-js
-        description: Node.js服务端开发笔记
-        url: "#" 
+# 扁平站点列表（articles 页面为“无层级并列卡片”，推荐直接使用顶层 sites）
+# Phase 2：当存在 RSS 缓存时，页面将优先渲染“文章条目卡片”；本处 sites 作为“来源站点列表”输入。
+# 重要：url 应填写“站点首页 URL”（不是某一篇文章链接），系统会自动发现 RSS/Atom。
+sites:
+  - name: GitHub Blog
+    icon: fab fa-github
+    description: GitHub 官方博客（工程/产品/安全）
+    url: https://github.blog/
+  - name: Cloudflare Blog
+    icon: fas fa-cloud
+    description: Cloudflare 工程与安全博客
+    url: https://blog.cloudflare.com/
+  - name: 阮一峰的网络日志
+    icon: fas fa-pen
+    description: 技术文章与随笔（Atom）
+    url: https://www.ruanyifeng.com/blog/
+  - name: Smashing Magazine
+    icon: fas fa-bolt
+    description: 前端与设计高质量文章
+    url: https://www.smashingmagazine.com/
+  - name: Web.dev
+    icon: fab fa-chrome
+    description: Web 开发最佳实践与新特性
+    url: https://web.dev/
+  - name: Node.js Blog
+    icon: fab fa-node-js
+    description: Node.js 官方博客
+    url: https://nodejs.org/en/blog/
