--- a/config/_default/site.yml
+++ b/config/_default/site.yml
@@ -55,6 +55,14 @@ rss:
     total: 50              # 全站聚合上限
     summaryMaxLength: 200  # 摘要最大长度（字符）
 
+# GitHub：用于 projects 页面右侧“贡献热力图”（可选）
+# - username：你的 GitHub 用户名（例如 torvalds）
+# - heatmapColor：热力图主题色（不带 #，例如 339af0）
+github:
+  username: ""      # 你的 GitHub 用户名（例如 torvalds；为空则 projects 页不展示热力图）
+  heatmapColor: 339af0
+  cacheDir: dev     # projects 仓库元信息缓存目录（默认 dev，仓库默认 gitignore）
+
 # 社交媒体链接：显示在侧边栏底部；可按需增删
 social:
   - name: GitHub
