--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "homepage": "https://rbetree.github.io/menav",
   "scripts": {
     "generate": "node src/generator.js",
-    "dev": "node src/generator.js && serve dist -l 5173",
+    "dev": "npm run sync-projects && npm run sync-articles && node src/generator.js && serve dist -l 5173",
+    "dev:offline": "node src/generator.js && serve dist -l 5173",
     "clean": "node ./scripts/clean.js",
     "build": "npm run clean && npm run generate",
     "sync-articles": "node ./scripts/sync-articles.js",
+    "sync-projects": "node ./scripts/sync-projects.js",
     "import-bookmarks": "node src/bookmark-processor.js",
     "test": "node --test test/*.js",
     "lint": "node --check \"src/generator.js\" && node --check \"src/bookmark-processor.js\" && node --check \"src/script.js\"",
