--- a/config/_default/site.yml
+++ b/config/_default/site.yml
@@ -34,8 +34,8 @@ fonts:
 profile:
   # 注意：首页（导航第一项）标题区优先使用 profile.title/profile.subtitle
   # 因此建议把首页希望展示的文案写在这里，避免“改了 pages/home.yml 但首页不生效”的误会
-  title: 欢迎使用
-  subtitle: 个人导航站点
+  title: Hello,
+  subtitle: Welcome to My Navigation
 
 # RSS（Phase 2）：用于 articles 页面文章聚合
 # 说明：
@@ -51,7 +51,7 @@ rss:
     maxRetries: 1          # 单站点重试次数（best-effort）
     maxRedirects: 3        # 最大重定向次数
   articles:
-    perSite: 5             # 单站点最多抓取条数
+    perSite: 8             # 单站点最多抓取条数
     total: 50              # 全站聚合上限
     summaryMaxLength: 200  # 摘要最大长度（字符）
 
